--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,6 +2,11 @@
     --orange: #eb7d00;
     --darkgrey: #333;
     --fontColor: #384047;
+    --fontColorLight: #6f7172;
+    --background: #e1e1e1;
+    --highlightColor: #f1f1f1;
+    --white: white;
+    --black: black;
 }
 
 
@@ -36,7 +41,7 @@ html {
 body {
     font-family: 'Oswald', sans-serif;
     margin: 0;
-    background: #e1e1e1;
+    background: var(--background);
     color: var(--fontColor);
 }
 
@@ -46,6 +51,7 @@ p {
     text-align: center;
 }
 
+/* #region general link - styling */
 p a {
     color: var(--darkgrey);
     text-decoration: none;
@@ -65,38 +71,57 @@ p a:after {
     content: " «";
 }
 
+/* #endregion */
+
+/* used to make sure that the footer is at the bottom of the page, if not enough content is provided */
 .content {
     min-height: 60em;
     width: 100%;
 }
-
 
 /* #endregion */
 
 
 /* #region header */
 
+/* hide desktop - wide icon */
 .logo1 {
     display: none;
 }
 
+/* show mobile - small icon */
 .logo2 {
     display: inline-block;
     text-align: center;
     position: relative;
-    height: 230px;
+    height: 190px;
 }
 
 .header {
     background-color: var(--darkgrey);
     overflow: hidden;
-    height: 240px;
+    height: 200px;
     text-align: center;
 }
 
-
 /* #endregion */
 
+/* #region imageWrapper */
+/* used to make sure all images within have 16:9 aspect ratio */
+.imageWrapper {
+    position: relative;
+    padding-bottom: 56.2%;
+    width: 100%;
+}
+
+.imageWrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+}
+
+/* #endregion */
 
 /* #region productCards */
 
@@ -111,28 +136,17 @@ p a:after {
     transition: max-height .5s ease-out;
 }
 
+/* make sure products on the front page are listed under eachother */
 .products.frontPage {
     flex-direction: column;
 }
 
-.imageWrapper {
-    position: relative;
-    padding-bottom: 56.2%;
-    width: 100%;
-}
-
-.imageWrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-}
 
 .productCard {
     text-align: left;
     padding: 20px;
     margin: 15px;
-    background-color: white;
+    background-color: var(--white);
     display: flex;
     border-radius: 5px;
     box-shadow: 0 2px 4px 0 #00000033, 0 3px 5px 0 #0000007c;
@@ -160,14 +174,14 @@ p a:after {
 .productCard .title {
     font-size: 1em;
     font-weight: bold;
-    background: #2f2f2f;
-    color: white;
+    background: var(--darkgrey);
+    color: var(--white);
     padding: 5px 5px;
     margin: 0px;
 }
 
 .price {
-    color: grey;
+    color: var(--fontColorLight);
     font-size: 1.2em;
 }
 
@@ -219,8 +233,8 @@ p a:after {
     padding-bottom: 0px;
     padding-left: 30px;
     left: 0;
-    background-color: #333;
-    color: #e1e1e1;
+    background-color: var(--darkgrey);
+    color: var(--background);
     text-align: center;
     margin-top: 25px;
     min-height: 200px;
@@ -230,7 +244,7 @@ p a:after {
 }
 
 .footer a {
-    color: #e1e1e1;
+    color: var(--background);
 }
 
 .footer a:hover {
@@ -263,14 +277,14 @@ p a:after {
     z-index: 99;
     border: none;
     outline: none;
-    background-color: #838383d0;
+    background-color: var(--fontColorLight);
     cursor: pointer;
     border-radius: 50%;
     transition: visibility 0.2s, opacity 0.1s linear;
 }
 
 .upButton:hover {
-    background-color: #292929;
+    background-color: var(--darkgrey);
 }
 
 .upButton img {
@@ -315,8 +329,9 @@ p a:after {
 }
 
 .spotlightElement .text {
-    color: #e1e1e1;
-    background-color: #333333ed;
+    color: var(--background);
+    background-color: var(--darkgrey);
+    opacity: .8;
     position: absolute;
     bottom: 0px;
     width: 100%;
@@ -356,11 +371,12 @@ p a:after {
     width: auto;
     margin-top: -22px;
     padding: 16px;
-    color: white;
-    background-color: rgba(85, 85, 85, 0.5);
+    color: var(--background);
+    background-color: var(--fontColorLight);
+    opacity: .9;
     font-weight: bold;
     font-size: 18px;
-    transition: 0.6s ease;
+    transition: 0.2s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
 }
@@ -373,7 +389,7 @@ p a:after {
 
 .previousSlide:hover,
 .nextSlide:hover {
-    background-color: #333;
+    background-color: var(--darkgrey);
 }
 
 
@@ -398,16 +414,16 @@ p a:after {
 /* pages list - highlight current page */
 
 .pagesList a.active {
-    background-color: #333;
-    color: #e4e4e4;
+    background-color: var(--darkgrey);
+    color: var(--white);
 }
 
 
 /* pages list hover effect */
 
 .pagesList a:hover:not(.active) {
-    background-color: #686868;
-    color: #e4e4e4;
+    background-color: var(--fontColorLight);
+    color: var(--white);
 }
 
 
@@ -425,7 +441,7 @@ p a:after {
     display: block;
     text-align: left;
     padding: 15px;
-    background-color: #ffffff;
+    background-color: var(--white);
     border-radius: 5px;
     font-size: 1.3em;
 }
@@ -437,7 +453,7 @@ p a:after {
 .formWrapper .productForm .imageContainer {
     max-height: 350px;
     overflow: auto;
-    border: 1px solid black;
+    border: 1px solid var(--darkgrey);
     margin-bottom: 25px;
     padding: 5px;
 }
@@ -475,6 +491,7 @@ form h1 {
     text-align: center;
 }
 
+/* general input styling */
 form input[type=text],
 form input[type=number],
 form input[type=file],
@@ -492,16 +509,31 @@ form textarea {
     box-sizing: border-box;
     border-radius: 5px;
     border: 0px;
-    background-color: #e4e4e4;
+    background-color: var(--background);
     font-family: inherit;
+    outline: none;
+}
+
+/* highlight active input field */
+form input[type=text]:focus,
+form input[type=number]:focus,
+form input[type=file]:focus,
+form input[type=email]:focus,
+form input[type=password]:focus,
+form input[type=search]:focus,
+form input[type=date]:focus form select:focus,
+form textarea:focus {
+    border: 2px solid var(--darkgrey);
+    background-color: var(--highlightColor);
 }
 
 form input:hover,
 form select:hover,
 form textarea:hover {
-    background-color: #f8f8f8;
+    background-color: var(--highlightColor);
 }
 
+/* make sure inputs and labels are algned under eachother */
 form input,
 form label,
 form textarea,
@@ -510,13 +542,15 @@ form select {
     font-size: .8em;
 }
 
+/* disablke hotizontal rezizing of the textarea */
 form textarea {
     resize: vertical;
     min-height: 150px;
 }
 
+/* #region submit button */
 form input[type=submit] {
-    color: #FFF;
+    color: var(--highlightColor);
     background-color: var(--orange);
     border-radius: 5px;
     border: none;
@@ -525,10 +559,11 @@ form input[type=submit] {
 }
 
 form input[type=submit]:hover {
-    background-color: #474747;
+    background-color: var(--fontColor);
     transition: .1s;
 }
 
+/* #endregion */
 
 /* remove arrows from number input */
 
@@ -541,6 +576,8 @@ form input[type=submit]:hover {
     -moz-appearance: textfield;
 }
 
+/* #region checkboxes */
+/* custom checkboxes to make sure checkboxes don't look to different when using another browser */
 form input[type=checkbox] {
     display: inline;
     float: right;
@@ -551,15 +588,15 @@ form input[type=checkbox] {
     float: right;
     width: 10px;
     height: 10px;
-    border: 2px solid grey;
+    border: 2px solid var(--fontColorLight);
     margin-top: 8px;
     position: relative;
     cursor: pointer;
 }
 
 .customCheckbox:hover {
-    background-color: lightgray;
-    border: 2px solid #333333;
+    background-color: var(--fontColorLight);
+    border: 2px solid var(--darkgrey);
     transition: .1s ease-in-out;
 }
 
@@ -583,8 +620,10 @@ form input[type=checkbox] {
     width: 10px;
     height: 10px;
     z-index: 1;
-    background-color: #f1f1f1;
+    background-color: var(--highlightColor);
 }
+
+/* #endregion */
 
 form label {
     font-weight: bold;
@@ -598,7 +637,7 @@ form label {
 .optional::after {
     content: " (optional)";
     font-size: .7em;
-    color: #646464;
+    color: var(--fontColorLight);
 }
 
 
@@ -617,14 +656,9 @@ form label {
     bottom: 5px;
     display: block;
     height: 45px;
-    outline: none;
     border-radius: 5px 0px 0px 5px;
     margin: 0;
     max-width: 97%;
-}
-
-.searchForm input[type=search]:active {
-    background-color: #e2e2e2;
 }
 
 .searchForm button {
@@ -637,28 +671,21 @@ form label {
     border-radius: 0px 5px 5px 0px;
     margin: 0px 0px 0px 3px;
     background-color: var(--orange);
-    outline: none;
     cursor: pointer;
     transition: .2s;
 }
 
 .searchForm button:hover {
-    background-color: #474747;
+    background-color: var(--fontColor);
 }
 
 .searchForm button img {
     height: 30px;
 }
 
-.searchForm::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
 .emptySearch {
-    background-color: #444444;
-    color: white;
+    background-color: var(--darkgrey);
+    color: var(--highlightColor);
     padding: 15px 5px;
     margin: 5px;
     margin-bottom: 15px;
@@ -667,7 +694,6 @@ form label {
     max-width: 100%;
     font-size: 1.2em;
 }
-
 
 /* #endregion */
 
@@ -708,7 +734,7 @@ form label {
 
 
 /* #region filter form */
-
+/* hide filter by default on mobile devices */
 .filterForm {
     display: none !important;
     border-radius: 0px 0px 5px 5px !important;
@@ -730,6 +756,7 @@ form label {
     cursor: pointer;
 }
 
+/* show filter after clicking the label on mobile devices */
 .filterToggle:checked+.filterForm {
     display: block !important;
     width: 85%;
@@ -744,7 +771,7 @@ form label {
     margin-bottom: 0px;
     width: 85% !important;
     padding: 15px;
-    background-color: #ffffff;
+    background-color: var(--white);
     border-radius: 5px 5px 0px 0px;
     position: relative;
     font-size: 1.3em;
@@ -783,6 +810,11 @@ form label {
     background-color: #fddedefd;
 }
 
+.errorHighlight:focus {
+    background-color: #fddedeab !important;
+    border: 3px solid #740000 !important;
+}
+
 .input {
     position: relative;
     display: inline-block;
@@ -793,7 +825,7 @@ form label {
     position: absolute;
     min-width: 100%;
     background-color: #db0000e8;
-    color: white;
+    color: var(--white);
     text-align: center;
     border-radius: 5px;
     padding: 8px 8px;
@@ -861,7 +893,7 @@ form label {
     width: 3px;
     top: 10px;
     right: 20px;
-    color: white;
+    color: var(--white);
     font-weight: bold;
     font-size: 1.5em;
     cursor: pointer;
@@ -895,7 +927,7 @@ form label {
 }
 
 .messageClose {
-    color: black;
+    color: var(--black);
 }
 
 .warningMessage .messageClose:hover {
@@ -908,10 +940,15 @@ form label {
 
 /* #region image gallery */
 
-.productViewWrapper {
-    background-color: white;
+.productViewWrapper,
+.imageGallery,
+.productInformation {
     width: 95%;
     margin: 0 auto;
+}
+
+.productViewWrapper {
+    background-color: var(--white);
     border-radius: 5px;
 }
 
@@ -923,17 +960,10 @@ form label {
 .imageGallery {
     display: block;
     box-sizing: border-box;
-    margin: 0 auto;
-    width: 95%;
 }
 
 .imageGallery form {
     text-align: right;
-}
-
-.productInformation {
-    margin: 0 auto;
-    width: 95%
 }
 
 .description {
@@ -946,7 +976,7 @@ form label {
 }
 
 .imageGallery.isHidden.gallerySlide img {
-    border-bottom: 5px solid #333333;
+    border-bottom: 5px solid var(--darkgrey);
 }
 
 
@@ -986,23 +1016,20 @@ form label {
 .iconButton {
     background-color: var(--orange);
     border: none;
-    height: 100%;
-    width: 100%;
+    outline: none;
     width: 60px;
     height: 60px;
-    /* padding: 5px; */
-    transition: .1s ease-in-out;
-    outline: none;
     cursor: pointer;
+    transition: .1s ease-in-out;
 }
 
 .iconButton:hover {
-    background-color: grey;
+    background-color: var(--fontColorLight);
     transition: .2s;
 }
 
 .iconButton:active {
-    background-color: #252525;
+    background-color: var(--darkgrey);
 }
 
 .iconButton img {
@@ -1012,7 +1039,6 @@ form label {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    border: none;
 }
 
 .cartButton {
@@ -1020,7 +1046,7 @@ form label {
 }
 
 
-/* button hover to show a better indication that something has been added to the cart */
+/* short "animation" to show that the button has been pressed successfully */
 
 .cartButton:active span {
     opacity: 1;
@@ -1085,7 +1111,7 @@ form label {
     width: 100%;
     height: 100%;
     padding: 5px;
-    background-color: grey;
+    background-color: var(--fontColorLight);
 }
 
 .hiddenIcon img {
@@ -1148,7 +1174,7 @@ form label {
     cursor: pointer;
     display: inline-block;
     text-align: center;
-    background-color: white;
+    background-color: var(--white);
     padding: 10px 0px;
     font-size: 1.5em;
     font-weight: bold;
@@ -1160,14 +1186,14 @@ form label {
 .vendorToggle:checked+.vendorContainer {
     display: block;
     width: 100%;
-    background-color: white;
+    background-color: var(--white);
     text-align: center;
     border-radius: 0px 0px 5px 5px;
 }
 
 .vendorContainer .customSubmit {
     width: 90%;
-    color: #FFF;
+    color: var(--white);
     background-color: var(--orange);
     border-radius: 5px;
     border: none;
@@ -1179,7 +1205,7 @@ form label {
 }
 
 .vendorContainer .customSubmit:hover {
-    background-color: #474747;
+    background-color: var(--fontColor);
 }
 
 .vendorsWrapper .products {
@@ -1195,7 +1221,7 @@ form label {
 .shoppingCart {
     width: 95%;
     margin: 15px auto !important;
-    background: white;
+    background: var(--white);
     border-radius: 5px;
     padding: 5px;
     display: grid;
@@ -1204,7 +1230,7 @@ form label {
 }
 
 .shoppingCart button {
-    color: #FFF;
+    color: var(--white);
     background-color: var(--orange);
     width: 100%;
     border-radius: 5px;
@@ -1215,7 +1241,7 @@ form label {
 }
 
 .shoppingCart button:hover {
-    background-color: #474747;
+    background-color: var(--fontColor);
 }
 
 .shoppingCart .emptySearch {
@@ -1235,7 +1261,7 @@ form label {
 }
 
 .cartListing .cartEntry {
-    background-color: white;
+    background-color: var(--width);
     border-radius: 5px;
     margin: 10px 0;
 }
@@ -1249,12 +1275,10 @@ form label {
 
 .cartTotal {
     grid-area: total;
-    /* position: sticky; */
-    bottom: 0;
     width: 95%;
     margin: 0 auto;
     padding: 5px;
-    background-color: #e0e0e0;
+    background-color: var(--highlightColor);
     border-radius: 5px 5px 0px 0px;
 }
 
@@ -1341,8 +1365,8 @@ form label {
 
 .table .tableRow.bottom {
     font-weight: bold;
-    color: white;
-    background-color: #363636 !important;
+    color: var(--white);
+    background-color: var(--darkgrey) !important;
 }
 
 .table.userManagement .customCheckbox {
@@ -1378,7 +1402,7 @@ form label {
     margin: 0;
     padding: 30px 0;
     width: 100%;
-    background-image: linear-gradient(to bottom, transparent, white);
+    background-image: linear-gradient(to bottom, transparent, var(--white));
 }
 
 .collapsibleFadeout label {
@@ -1386,14 +1410,14 @@ form label {
     margin: 0 auto;
     width: 60px;
     height: 60px;
-    background-color: #838383d0;
+    background-color: var(--fontColorLight);
     border-radius: 50%;
     transition: .2s ease-in-out;
     transition: all .5s;
 }
 
 .collapsibleFadeout label:hover {
-    background-color: #292929;
+    background-color: var(--darkgrey);
 }
 
 .collapsibleFadeout label img {
@@ -1422,7 +1446,7 @@ form label {
 /* #region imprint */
 
 .imprint {
-    background-color: white;
+    background-color: var(--white);
     max-width: 80%;
     margin: 20px auto;
     padding: 15px 50px;
